# py-sql-importer-exporter

./: .gitignore  .pre-commit-config.yaml  GUIDE.md  Makefile  README.md  config.mk  docker-compose.yml  git-push.sh  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: credentials.env  docstringmanager.yaml  export_config.json  import_config.json
config/backup/: export_config.json  import_config.json  transfer_config.json
data/sql/: Bayer.sql  Botmaker-14.sql  Botmaker-21.sql  Braze.sql  CBE.sql  Formato_Google.sql  Formato_Meta.sql  HPE.sql  Marketo.sql  Meio_Mensagem.sql  PerfectDraft.sql  PerfectDraft_Semanal.sql  PerfectDraft_Semanal_BKP.sql  PerfectDraft_Semanal_Subqueries.sql  Teste.sql  Unilever_Argentina.sql  Zenvia-21.sql  emBlue.sql
data/template/: UFS_NOLA_TEMPLATE.sql
data/template/backup/: UFS_NOLA_TEMPLATE.sql
docs/: README_ref.md  notes.md
src/: exporter.py  importer.py  sorted.py  transfer.py
src/common/: __init__.py  echo.py  sorter.py  utils.py
src/common/base/: __init__.py  base_class.py
src/common/errors/: __init__.py  errors.py
src/config/: __init__.py  constants.py  constypes.py  settings_manager.py
src/core/: constants.py  decorators.py  functions.py  logger.py  utils.py
src/enum/: __init__.py  operation_types.py
src/infrastructure/: __init__.py  logger.py
src/infrastructure/database/: __init_.py  connection_string.py  database_connection_manager.py
src/infrastructure/database/scripts/: create_table.sql
src/repositories/: file_handler.py  sql_handler.py
src/services/: __init__.py  exporter.py
tests/: benchmark_pyodbc.py  testes.py
tools/: commit.txt
