[tool.poetry]
name = "py-sql-importer-exporter"
version = "0.1.0"
description = ""
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyodbc = "^5.2.0"
chardet = "^5.2.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.37"
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
pylance = "^0.21.0"
pylint = "^3.3.3"
pyright = "^1.1.392.post0"


[tool.pyright]
typeCheckingMode = "standard"
extraPaths = ["src", "src/core"]

[tool.mypy]
mypy_path = ["./typings"]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unused-argument", # Remover quando for corrigido
    "unused-import" # Remover quando for corrigido
]

[tool.poetry.scripts]
# main = "src.main:main"
